--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section id="landingPage">
       <h1>Welcome to Solana Wallet Manager</h1>
       <p>This software helps manage your accounts, checks for malicious connections, and recovers funds from rugged tokens.</p>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2c/Solana_logo.svg/256px-Solana_logo.svg.png" alt="Solana Coin" class="solana-coin"> <!-- Use valid URL -->
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2c/Solana_logo.svg/256px-Solana_logo.svg.png" alt="Solana Coin" class="solana-coin">
     </section>
 
     <section id="dashboard" style="display: none;">
